Spacing on Project Section fixed on all screen size

--- a/intro-section.css
+++ b/intro-section.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+/* html{
+  scroll-behavior: smooth;
+} */
 *{
   padding:0;
   box-sizing: border-box;
@@ -12,6 +15,7 @@
   width: 100%;
   overflow-x: hidden;
 }
+
 
 .site-wrapper .intro-section{ 
   width: 100%;
